@@ -13,9 +13,9 @@ application {
 }
 
 dependencies {
-    implementation("io.helidon.nima.webserver:helidon-nima-webserver:4.0.0-ALPHA5")
-    implementation("io.helidon.nima.http2:helidon-nima-http2-webserver:4.0.0-ALPHA5")
-    implementation("io.helidon.nima.http.media:helidon-nima-http-media-jsonb:4.0.0-ALPHA5")
+    implementation("io.helidon.nima.webserver:helidon-nima-webserver:4.0.0-ALPHA6")
+    implementation("io.helidon.nima.http2:helidon-nima-http2-webserver:4.0.0-ALPHA6")
+    implementation("io.helidon.nima.http.media:helidon-nima-http-media-jsonb:4.0.0-ALPHA6")
 
     // for self-signed cert generation
     implementation("io.netty:netty-handler:4.1.89.Final")
@@ -27,11 +27,10 @@ dependencies {
 
 java {
     toolchain {
-        languageVersion.set(JavaLanguageVersion.of(19))
+        languageVersion.set(JavaLanguageVersion.of(20))
     }
 }
 
 tasks.getByName<Test>("test") {
     useJUnitPlatform()
-    jvmArgs(listOf("--enable-preview"))
 }
